hphp/test/slow/hhbbc/func_family_014.php.expectf
Fatal error: Class D contains abstract method (foo) and must therefore be declared abstract or implement the remaining methods in %s/func_family_014.php on line 11
